· Added basic login system · Added calendar · Added chat (basic only) · Added bar chart instead of line chart · Started translating · Major Bug fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui._parent.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_navigation_app_bar"
@@ -37,10 +37,9 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation"
-        android:layout_below="@id/top_navigation_app_bar"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph"/>
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/top_navigation_app_bar"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
