--- a/app/src/main/res/layout/frg_login.xml
+++ b/app/src/main/res/layout/frg_login.xml
@@ -5,30 +5,6 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_wave_1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_wave_2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_wave_3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary" />
-
-    <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,15 +13,15 @@
         android:src="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:tint="@color/black" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="54dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Anmelden"
+        android:text="@string/login"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,10 +32,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="48dp"
         android:fontFamily="@font/roboto"
-        android:text="Willkommen zurück bei Xereon!"
+        android:text="@string/welcome_back_to_xereon"
         android:textColor="@color/text_gray"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="E-Mail Adresse"
+        android:hint="@string/email_address"
         app:boxBackgroundColor="@android:color/transparent"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidth="3dp"
@@ -82,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@id/login_info_txt"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintWidth_max="350dp"
-        app:startIconDrawable="@drawable/ic_arrow_back">
+        app:startIconDrawable="@drawable/ic_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -99,7 +75,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
-        android:hint="Passwort"
+        android:hint="@string/password"
         app:boxBackgroundColor="@android:color/transparent"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidth="3dp"
@@ -109,8 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_email_input"
         app:layout_constraintWidth_max="350dp"
-        app:startIconTint="@color/black"
-        app:startIconDrawable="@drawable/ic_location">
+        app:startIconDrawable="@drawable/ic_lock">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -126,7 +101,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/roboto_medium"
         android:padding="3dp"
-        android:text="Passwort vergessen?"
+        android:text="@string/forgot_password"
         android:textColor="@color/primary"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@id/login_btn"
@@ -141,7 +116,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="56dp"
         android:textAllCaps="false"
-        android:text="Anmelden"
+        android:text="@string/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +141,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/roboto"
         android:padding="5dp"
-        android:text="Noch keinen Account?"
+        android:text="@string/no_account_yet"
         android:textColor="@color/black"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="@id/login_btn"
