--- a/app/src/main/res/layout/incl_opening_hours.xml
+++ b/app/src/main/res/layout/incl_opening_hours.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="opening"
             type="String[]" />
@@ -34,18 +33,18 @@
                 android:text="Montag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 2}" />
+                app:isCurrentDay="@{currentDay == 0}" />
 
             <TextView
                 android:id="@+id/store_opening_monday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[0]}"
+                android:text="@{opening[0].length == 0 ? `geschlossen` : opening[0]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 2}"
+                app:isCurrentDay="@{currentDay == 0}"
                 tools:text="18:00-22:00" />
         </TableRow>
 
@@ -65,18 +64,18 @@
                 android:text="Dienstag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 3}" />
+                app:isCurrentDay="@{currentDay == 1}" />
 
             <TextView
                 android:id="@+id/store_opening_tuesday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[1]}"
+                android:text="@{opening[1].length == 0 ? `geschlossen` : opening[1]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 3}"
+                app:isCurrentDay="@{currentDay == 1}"
                 tools:text="18:00-22:00" />
 
         </TableRow>
@@ -96,18 +95,18 @@
                 android:text="Mittwoch"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 4}" />
+                app:isCurrentDay="@{currentDay == 2}" />
 
             <TextView
                 android:id="@+id/store_opening_wednesday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[2]}"
+                android:text="@{opening[2].length == 0 ? `geschlossen` : opening[2]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 4}"
+                app:isCurrentDay="@{currentDay == 2}"
                 tools:text="18:00-22:00" />
         </TableRow>
 
@@ -127,18 +126,18 @@
                 android:text="Donnerstag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 5}" />
+                app:isCurrentDay="@{currentDay == 3}" />
 
             <TextView
                 android:id="@+id/store_opening_thursday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[3]}"
+                android:text="@{opening[3].length == 0 ? `geschlossen` : opening[3]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 5}"
+                app:isCurrentDay="@{currentDay == 3}"
                 tools:text="18:00-22:00" />
         </TableRow>
 
@@ -157,18 +156,18 @@
                 android:text="Freitag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 6}" />
+                app:isCurrentDay="@{currentDay == 4}" />
 
             <TextView
                 android:id="@+id/store_opening_friday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[4]}"
+                android:text="@{opening[4].length == 0 ? `geschlossen` : opening[4]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 6}"
+                app:isCurrentDay="@{currentDay == 4}"
                 tools:text="18:00-22:00" />
         </TableRow>
 
@@ -188,18 +187,18 @@
                 android:text="Samstag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 7}" />
+                app:isCurrentDay="@{currentDay == 5}" />
 
             <TextView
                 android:id="@+id/store_opening_saturday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[5]}"
+                android:text="@{opening[5].length == 0 ? `geschlossen` : opening[5]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 7}"
+                app:isCurrentDay="@{currentDay == 5}"
                 tools:text="18:00-22:00" />
         </TableRow>
 
@@ -218,18 +217,18 @@
                 android:text="Sonntag"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                app:isCurrentDay="@{currentDay == 1}" />
+                app:isCurrentDay="@{currentDay == 6}" />
 
             <TextView
                 android:id="@+id/store_opening_sunday_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginEnd="16dp"
-                android:text="@{opening[6]}"
+                android:text="@{opening[6].length == 0 ? `geschlossen` : opening[6]}"
                 android:textAlignment="textEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="13sp"
-                app:isCurrentDay="@{currentDay == 1}"
+                app:isCurrentDay="@{currentDay == 6}"
                 tools:text="geschlossen" />
         </TableRow>
     </TableLayout>
