--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="android:windowLightStatusBar">true</item>
 
         <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:windowBackground">@color/background</item>
 
         <item name="android:windowAnimationStyle">@null</item>
     </style>
@@ -43,10 +44,12 @@
 
         <item name="chart_baseLineColor">@color/black</item>
         <item name="chart_baseLineWidth">1dp</item>
+    </style>
 
-        <item name="chart_scrubLineColor">@color/black</item>
-        <item name="chart_scrubLineWidth">2dp</item>
-        <item name="chart_scrubEnabled">false</item>
+    <style name="chart_BarChart">
+        <item name="currentBarColor">#99E84C3D</item>
+        <item name="barColor">@color/primary</item>
+        <item name="showCurrentPopularity">true</item>
     </style>
 
 </resources>
